<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_ndegree_apps">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="bit_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="bclick_toast1">This button will launch my Spotify Streamer</string>
    <string name="bclick_toast2">This button will launch my Scores App</string>
    <string name="bclick_toast3">This button will launch my Library App</string>
    <string name="bclick_toast4">This button will launch my Build it Bigger App</string>
    <string name="bclick_toast5">This button will launch my XYZ Reader</string>
    <string name="bclick_toast6">This button will launch my Capstone App</string>
</resources>
