<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:text="@string/my_ndegree_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/button1"
        android:layout_row="1"
        android:layout_column="0"
        android:background="#EE8F3B"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_row="2"
        android:layout_column="0"
        android:background="#EE8F3B"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_row="3"
        android:layout_column="0"
        android:background="#EE8F3B"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bit_bigger"
        android:id="@+id/button4"
        android:layout_row="4"
        android:layout_column="0"
        android:background="#EE8F3B"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_row="5"
        android:layout_column="0"
        android:background="#EE8F3B"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_row="6"
        android:layout_column="0"
        android:background="#FF0000"
        android:textColor="#ffffff"
        android:layout_margin="5dp"/>

</GridLayout>
